--- a/package.json
+++ b/package.json
@@ -1,24 +1,37 @@
 {
-  "name": "release",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "@actions/core": "^1.6.0",
-    "@actions/github": "^5.0.0"
-  },
-  "devDependencies": {
-    "@types/chai": "^4.2.22",
-    "@types/mocha": "^9.0.0",
-    "chai": "^4.3.4",
-    "eslint": "^7.32.0",
-    "mocha": "^9.1.2",
-    "prettier": "^2.4.1"
-  }
+	"name": "release",
+	"version": "1.0.0",
+	"description": "",
+	"main": "index.js",
+	"scripts": {
+		"build": "tsc && ncc build",
+		"format": "prettier --write '**/*.ts'",
+		"format-check": "prettier --check '**/*.ts'",
+		"lint": "eslint src/**/*.ts",
+		"test:unit": "jest unit",
+		"test:int": "__test__/integration-tests.sh",
+		"test": "npm run test:unit && npm run test:int"
+	},
+	"keywords": [],
+	"author": "",
+	"license": "ISC",
+	"dependencies": {
+		"@actions/core": "^1.6.0",
+		"@actions/github": "^5.0.0"
+	},
+	"devDependencies": {
+		"@types/chai": "^4.2.22",
+		"@types/mocha": "^9.0.0",
+		"@types/node": "^16.10.2",
+		"@typescript-eslint/parser": "^4.33.0",
+		"@vercel/ncc": "^0.31.1",
+		"chai": "^4.3.4",
+		"eslint": "^7.32.0",
+		"eslint-plugin-github": "^4.3.0",
+		"js-yaml": "^4.1.0",
+		"mocha": "^9.1.2",
+		"parcel-bundler": "^1.12.5",
+		"prettier": "^2.4.1",
+		"typescript": "^4.4.3"
+	}
 }
