--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,16 @@
 {
-  "compilerOptions": {
-    "target": "es6",
-    "module": "commonjs",
-    "lib": ["es6"],
+	"compilerOptions": {
+		"target": "es6",
+		"module": "system",
+		"lib": ["es6"],
     "outDir": "./lib",
-    "rootDir": "./src",
-    "declaration": true,
-    "strict": true,
-    "noImplicitAny": false,
-    "esModuleInterop": true
-  },
-  "exclude": ["__test__", "lib", "node_modules"]
+		// "outFile": "./dist/index.js",
+		"rootDir": "./src",
+		"declaration": true,
+		"strict": true,
+		"noImplicitAny": false,
+		"esModuleInterop": true,
+		"moduleResolution": "Node"
+	},
+	"exclude": ["__test__", "lib", "node_modules", "*.test.ts"]
 }
