--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "release",
 	"version": "1.0.0",
 	"description": "",
-	"main": "index.js",
+	"main": "lib/index.js",
 	"scripts": {
 		"build": "tsc && ncc build",
 		"format": "prettier --write '**/*.ts'",
