--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
 		"format-check": "prettier --check '**/*.ts'",
 		"lint": "eslint src/**/*.ts",
 		"test:unit": "jest unit",
-		"test:int": "__test__/integration-tests.sh",
-		"test": "npm run test:unit && npm run test:int"
+		"test": "jest"
 	},
 	"keywords": [],
 	"author": "",
@@ -21,6 +20,7 @@
 	},
 	"devDependencies": {
 		"@types/chai": "^4.2.22",
+		"@types/jest": "^27.0.2",
 		"@types/mocha": "^9.0.0",
 		"@types/node": "^16.10.2",
 		"@typescript-eslint/parser": "^4.33.0",
@@ -28,10 +28,15 @@
 		"chai": "^4.3.4",
 		"eslint": "^7.32.0",
 		"eslint-plugin-github": "^4.3.0",
+		"eslint-plugin-jest": "^24.5.2",
+		"jest": "^27.2.4",
+		"jest-circus": "^27.2.4",
 		"js-yaml": "^4.1.0",
 		"mocha": "^9.1.2",
 		"parcel-bundler": "^1.12.5",
 		"prettier": "^2.4.1",
+		"ts-jest": "^27.0.5",
+		"ts-node": "^10.2.1",
 		"typescript": "^4.4.3"
 	}
 }
