--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
 		"target": "es6",
 		"module": "system",
 		"lib": ["es6"],
-    "outDir": "./lib",
+		"outDir": "./lib",
 		// "outFile": "./dist/index.js",
 		"rootDir": "./src",
 		"declaration": true,
@@ -12,5 +12,6 @@
 		"esModuleInterop": true,
 		"moduleResolution": "Node"
 	},
+	"include": ["src/**/*.ts"],
 	"exclude": ["__test__", "lib", "node_modules", "*.test.ts"]
 }
