--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,8 @@
 		"strict": true,
 		"noImplicitAny": false,
 		"esModuleInterop": true,
-		"moduleResolution": "Node"
+		"moduleResolution": "Node",
+		"removeComments": true
 	},
 	"include": ["src/**/*.ts"],
 	"exclude": ["__test__", "lib", "node_modules", "*.test.ts"]
