--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,5 +14,5 @@
 		"removeComments": true
 	},
 	"include": ["src/**/*.ts"],
-	"exclude": ["__test__", "lib", "node_modules", "*.test.ts"]
+	"exclude": ["__test__", "lib", "node_modules", "**/*.test.ts"]
 }
