--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,15 +1,15 @@
 name: CI
 on:
   push:
-    branches: [main]
+    branches:
+      - main
     paths-ignore:
       - "README.md"
-      - "docs/**"
   pull_request:
-    branches: [main]
+    branches:
+      - main
     paths-ignore:
       - "README.md"
-      - "docs/**"
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -37,7 +37,8 @@ jobs:
 
   package:
     if: github.event_name == 'push' && github.ref == 'refs/heads/main'
-    needs: [build]
+    needs:
+      - build
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
