--- a/action.yml
+++ b/action.yml
@@ -6,9 +6,7 @@ inputs:
     required: true
   pull_requests:
     description: |
-      Pull requests JSON
-
-      Required fields: number, url, milestone, title, state
+      Pull requests JSON Array. Required fields: number, url, milestone, title, body, state.
     required: true
 outputs:
   body:
