--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"@types/chai": "^4.2.22",
 		"@types/jest": "^27.0.2",
 		"@types/js-yaml": "^4.0.3",
+		"@types/json2md": "^1.5.1",
 		"@types/node": "^16.10.2",
 		"@typescript-eslint/parser": "^4.33.0",
 		"@vercel/ncc": "^0.31.1",
@@ -31,6 +32,7 @@
 		"jest": "^27.2.4",
 		"jest-circus": "^27.2.4",
 		"js-yaml": "^4.1.0",
+		"json2md": "^1.12.0",
 		"mocha": "^9.1.2",
 		"prettier": "^2.4.1",
 		"ts-jest": "^27.0.5",
