--- a/package.json
+++ b/package.json
@@ -16,13 +16,15 @@
 	"license": "ISC",
 	"dependencies": {
 		"@actions/core": "^1.6.0",
-		"@actions/github": "^5.0.0"
+		"@actions/github": "^5.0.0",
+		"marked": "^4.0.6"
 	},
 	"devDependencies": {
 		"@types/chai": "^4.2.22",
 		"@types/jest": "^27.0.2",
 		"@types/js-yaml": "^4.0.3",
 		"@types/json2md": "^1.5.1",
+		"@types/marked": "^4.0.1",
 		"@types/node": "^16.10.2",
 		"@typescript-eslint/parser": "^4.33.0",
 		"@vercel/ncc": "^0.31.1",
