--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"main": "lib/index.js",
 	"scripts": {
 		"build": "tsc && ncc build",
-		"format": "prettier --write '**/*.ts'",
+		"format": "organize-imports-cli **/*.ts && prettier --write '**/*.ts'",
 		"format-check": "prettier --check '**/*.ts'",
 		"lint": "eslint src/**/*.ts",
 		"test:unit": "jest unit",
@@ -36,6 +36,7 @@
 		"js-yaml": "^4.1.0",
 		"json2md": "^1.12.0",
 		"mocha": "^9.1.2",
+		"organize-imports-cli": "^0.9.0",
 		"prettier": "^2.4.1",
 		"ts-jest": "^27.0.5",
 		"ts-node": "^10.2.1",
