--- a/action.yml
+++ b/action.yml
@@ -4,15 +4,21 @@ inputs:
   token:
     description: Github token
     required: true
-  pull_requests:
-    description: |
-      Pull requests JSON Array. Required fields: number, url, milestone, title, body, state.
+  repo:
+    description: Repo to fetch pull requests from. In format "owner/repo".
+    required: true
+  milestone:
+    description: Milestone title. Must be in format vX.Y.Z (e.g. "v1.39.45").
     required: true
 outputs:
-  yaml:
-    description: Changelog YAML
-  markdown:
-    description: Changelog markdown
+  patch_yaml:
+    description: Changelog YAML for the patch release
+  patch_markdown:
+    description: Changelog markdown for the patch release
+  minor_markdown:
+    description: Changelog markdown for the minor release branch
+  minor_version:
+    description: Minor version string, e.g. "v1.39"
 runs:
   using: "node12"
   main: "dist/index.js"
