Breaking changes: cumulative markdown for release branch (#31)
* Breaking changes: cumulative markdown changelog (#26)

* Collect the whole cumulative markdown

* clean comments

* update action.yml

* fmt

* build: update distribution (#27)

Co-authored-by: shvgn <shvgn@users.noreply.github.com>

* update readme to use tag v2

* fix import

* build: update distribution (#28)

Co-authored-by: shvgn <shvgn@users.noreply.github.com>

* update worflow tu support release branches and tags

* move render results to files

* clean code

* collect similar MD changelogs for patch release and release branch

* rename things

* fixes

* test milestone version class

* don't skip generating when milestone has no merged pulls

* build

* fix outputs

* fix passing wrong chages for cumulative changelog

* update readme

* fix readme: v2

* fix typos

Co-authored-by: shvgn <shvgn@users.noreply.github.com>
Co-authored-by: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>

--- a/action.yml
+++ b/action.yml
@@ -4,9 +4,11 @@ inputs:
   token:
     description: Github token
     required: true
-  pull_requests:
-    description: |
-      Pull requests JSON Array. Required fields: number, url, milestone, title, body, state.
+  repo:
+    description: Repo to fetch pull requests from. In format "owner/repo".
+    required: true
+  milestone:
+    description: Milestone title. Must be in format vX.Y.Z (e.g. "v1.39.45").
     required: true
   allowed_sections:
     description: |
@@ -19,10 +21,14 @@ inputs:
         node-manager
     required: false
 outputs:
-  yaml:
-    description: Changelog YAML
-  markdown:
-    description: Changelog markdown
+  release_yaml:
+    description: Changelog YAML for the patch release
+  release_markdown:
+    description: Changelog markdown for the patch release
+  branch_markdown:
+    description: Changelog markdown for the minor release branch
+  minor_version:
+    description: Minor version string, e.g. "v1.39"
 runs:
   using: "node12"
   main: "dist/index.js"
