--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
 		"build": "tsc && ncc build",
 		"format": "organize-imports-cli **/*.ts && prettier --write '**/*.ts'",
 		"format-check": "prettier --check '**/*.ts'",
-		"lint": "eslint src/**/*.ts",
 		"test:unit": "jest unit",
 		"test": "jest"
 	},
@@ -15,8 +14,8 @@
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
-		"@actions/core": "^1.6.0",
-		"@actions/github": "^5.0.0",
+		"@actions/core": "^1.10.1",
+		"@actions/github": "^6.0.0",
 		"marked": "^4.0.6"
 	},
 	"devDependencies": {
@@ -26,20 +25,18 @@
 		"@types/json2md": "^1.5.1",
 		"@types/marked": "^4.0.1",
 		"@types/node": "^16.10.2",
-		"@typescript-eslint/parser": "^4.33.0",
-		"@vercel/ncc": "^0.31.1",
-		"eslint": "^7.32.0",
-		"eslint-plugin-github": "^4.3.0",
-		"eslint-plugin-jest": "^24.5.2",
+		"@typescript-eslint/parser": "^8.0.0",
+		"@vercel/ncc": "^0.38.1",
 		"jest": "^27.2.4",
 		"jest-circus": "^27.2.4",
 		"js-yaml": "^4.1.0",
 		"json2md": "^1.12.0",
 		"mocha": "^9.1.2",
 		"organize-imports-cli": "^0.9.0",
-		"prettier": "^2.4.1",
+		"prettier": "^3.3.3",
 		"ts-jest": "^27.0.5",
 		"ts-node": "^10.2.1",
+		"ts-node-dev": "^2.0.0",
 		"typescript": "^4.4.3"
 	}
 }
